--- a/kwebapp.css
+++ b/kwebapp.css
@@ -3,14 +3,12 @@ html, body					{ margin: 0;
 						  color: #444;
 						  height: 100%; }
 body						{ font-family: 'Alegreya Sans', sans-serif;
-						  font-weight: 400;
-						  font-size: 14pt; }
+						  font-size: 13pt; }
 a						{ text-decoration: none; 
 						  color: #0575BD; }
 body > section > nav a				{ color: rgba(5, 117, 189, 0.5); }
 body > section > nav a:hover			{ color: rgba(5, 117, 189, 0.9); }
 body > section > nav				{ width: 50%;
-						  font-size: 13pt;
 						  margin: 0 auto;
 						  padding-top: 1em; 
 						  color: rgba(0, 0, 0, 0.5);
@@ -25,8 +23,7 @@ body > section > header				{ width: 50%;
 						  display: -webkit-flex;
 						  align-items: flex-end;
 						  -webkit-align-items: flex-end; }
-body > section > header nav a			{ color: #000; 
-						  font-size: 14pt; }
+body > section > header nav a			{ color: #000; }
 body > section > header nav a span		{ border-bottom: thin transparent; }
 body > section > header nav a:hover		{ color: #000;  }
 body > section > header nav a:hover span	{ border-bottom: thin solid #0575BD; }
@@ -44,13 +41,13 @@ h1 a						{ color: inherit;
 						  text-shadow: 1px 1px 1px transparent; }
 h1 a:hover					{ text-shadow: 0px 1px 1px #aaa; }
 h1						{ font-size: 24pt;
-						  font-weight: 400;
+						  font-weight: 500;
 						  line-height: 22pt;
 						  flex: 1;
 						  margin: 0;
 						  -webkit-flex: 1;
 						  margin: 0 8pt;  }
-h2						{ font-weight: 400;
+h2						{ font-weight: 500;
 						  text-align: left;
 						  width: auto;
 						  text-shadow: 0px 0px 1px #000; 
@@ -61,7 +58,7 @@ a						{ text-decoration: none; }
 footer						{ text-align: center;
 						  padding-top: 1em;
 						  padding-bottom: 1em;
-						  font-size: 11pt;
+						  font-size: smaller;
 						  color: #678; }
 footer a					{ color: #89a; }
 footer a:hover					{ color: #456; }
