--- a/index.css
+++ b/index.css
@@ -1,100 +1,133 @@
-html, body			{ margin: 0; 
-				  height: 100%; }
-body				{ font-family: "Alegreya Sans", sans-serif; 
-				  background-color: #333;
-				  font-weight: 400;
-				  font-size: 14pt; }
-section				{ display: flex; 
-				  display: -webkit-flex;
-			 	  flex-direction: column;
-			 	  -webkit-flex-direction: column;
-				  height: 100%; }
-header				{ display: flex;
-				  display: -webkit-flex;
-				  width: 50%;	
-				  min-width: 600px;
-				  padding-top: 2%;
-				  margin-left: auto;
-				  margin-right: auto;
-			  	  flex-direction: row;
-				  align-items: center;
-				  -webkit-align-items: center;
-			  	  -webkit-flex-direction: row; }
-header nav			{ flex: 1; 
-				  -webkit-flex: 1;
-				  font-size: 13pt;
-				  font-family: "Alegreya Sans", Gill Sans, Gill Sans MT, Calibri, sans-serif;
-				  text-align: right; }
-header nav a			{ color: #ccc; }
-header nav a + a		{ border-left: thin solid #666; 
-				  margin-left: 0.5ex;
-				  padding-left: 1ex; }
-header nav a:hover		{ color: #fff; }
-#logo img			{ width: 90px; 
-			 	  opacity: 0.7; }
-#main				{ flex: 1; 
-			 	  -webkit-flex: 1;
-				  padding-top: 20%;
-				  width: 50%;
-				  min-width: 600px;
-				  color: #fff; 
-				  margin-left: auto;
-				  margin-right: auto; }
-#main p, li			{ line-height: 140%;
-				  color: #bbb;}
-#main a				{ color: #ff0; 
-				  border-bottom: thin solid transparent;
-				  text-shadow: 1px 1px 0 #444; }
-#main a:hover			{ border-bottom: thin solid rgba(255, 255, 0, 0.2); }
-h2				{ font-size: 28pt; 
-				  margin: 0;
-				  text-shadow: 1px 1px 0 #000;
-			  	  font-weight: normal; }
-h1				{ color: #ddd; 
-				  font-size: 20pt;
-				  text-shadow: 1px 1px 0 #000;
-				  font-weight: normal;
-				  margin: 0;  }
-h3				{ margin: 0;
-				  font-weight: normal;
-				  font-size: 18pt; }
-a				{ text-decoration: none; }
-footer				{ width: 50%;
-				  min-width: 600px;
-				  margin-left: auto;
-				  margin-right: auto;
-				  padding-bottom: 1em;
-				  font-size: 11pt;
-				  line-height: 130%;
-				  color: #666; }
-footer a			{ color: #888; }
-footer a:hover			{ color: #aaa; }
-code				{ font-family: monospace;
-				  font-size: smaller; }
-ul				{ list-style-type: none; 
-				  padding: 0; }
-ul li				{ display: flex; }
-ul li > :first-child		{ flex: 1; }
-ul li .src			{ opacity: 0.5; }
+html, body				{ margin: 0; }
+body					{ font-family: "Alegreya Sans", sans-serif; 
+					  background-color: #f6f6ff;
+					  font-weight: 400;
+					  color: #334;
+					  font-size: 16pt; }
+
+article					{ padding: 3rem 25%; }
+article > header			{ padding: 3rem 0; }
+article > header p			{ font-variant: small-caps; 
+					  margin-top: 0;
+					  opacity: 0.7;
+					  text-align: center; }
+article > header h3			{ text-align: center; 
+				  	  font-size: 24pt;
+					  margin-bottom: 0;
+					  font-weight: 400; }
+.paired					{ display: flex; 
+					  align-items: center; }
+.paired > :first-child			{ padding-right: 1rem; }
+.paired > :last-child			{ padding-left: 1rem; }
+p, li					{ line-height: 140%; }
+a					{ color: blue; 
+					  text-decoration: none; 
+					  border-bottom: thin solid transparent; }
+a:hover					{ border-bottom: thin solid blue; }
+
+#tophead				{ display: flex;
+					  display: -webkit-flex;
+					  width: 50%;	
+					  padding-top: 4rem;
+					  padding-bottom: 0.8rem;
+					  color: #bbd;
+					  margin-left: auto;
+					  margin-right: auto;
+					  flex-direction: row;
+					  align-items: center;
+					  -webkit-align-items: center;
+					  -webkit-flex-direction: row; }
+#tophead nav				{ flex: 1; 
+					  -webkit-flex: 1;
+					  font-size: 13pt;
+					  text-align: right; }
+#tophead nav span + span		{ border-left: thin solid #666; 
+					  margin-left: 0.5ex;
+					  padding-left: 1ex; }
+#tophead h1				{ color: #001; 
+					  font-size: 20pt;
+					  font-weight: normal;
+					  margin: 0;  }
+
+#top #logo img				{ width: 90px; }
+#top					{ padding: 18rem 25% 6rem 25%;
+					  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0.85) 100%), 
+						      url(background.png);
+					  background-position: 50% 50%;
+					  background-repeat: no-repeat;
+					  background-color: #000;
+					  color: #fff; }
+#top a					{ color: #ff0; 
+					  text-shadow: 1px 1px 0 #444; }
+#top a:hover				{ border-bottom: thin solid rgba(255, 255, 0, 0.4); }
+#top h2					{ font-size: 28pt; 
+					  margin: 0;
+					  text-shadow: 1px 1px 0 #000;
+					  font-weight: normal; }
+
+#start					{ background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), 
+						      url(background-white.png); 
+					  background-position: 50% 50%;
+					  background-repeat: repeat-y; }
+#start .exemplar 			{ color: #888; }
+#start .exemplar span			{ color: #000; }
+#start nav				{ margin: 1.1em 0; 
+					  font-size: 14pt;
+					  opacity: 0.8; }
+#start pre				{ font-size: 11pt; }
+#start > section			{ padding: 4rem 0; }
+#start > section:first-child		{ padding-top: 6rem; }
+#start > section:last-child		{ padding-bottom: 6rem; }
+#start img				{ max-width: 100%; }
+#start p				{ line-height: 20pt; }
+#start section p			{ font-size: #000; }
+#start figure				{ margin: 0;
+					  text-align: center; }
+#start h4				{ font-weight: 400;
+					  margin: 0;
+					  font-size: 22pt; }
+
+.interstice				{ background-color: #88888f;
+					  text-shadow: 0 0 2px #000;
+					  font-weight: 500;
+					  padding-top: 3rem;
+					  padding-bottom: 3rem;
+					  color: #fff; }
+.interstice .main			{ font-size: 22pt; 
+					  color: #fff;
+					  line-height: 28pt; }
+
+.interstice2				{ padding-top: 1rem;
+					  padding-bottom: 0;
+					  border-top: thin solid #ccc;
+					  text-align: center; }
+.interstice2 .main			{ font-size: 22pt; 
+					  line-height: 28pt; }
+
+
+#news					{ background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), 
+						      url(background-white.png); 
+					  background-position: 50% 50%;
+					  padding-bottom: 6rem;
+					  background-repeat: repeat-y; }
+#news ul				{ list-style-type: none; 
+					  padding: 0; }
+#news ul li				{ display: flex; }
+#news ul li > :first-child		{ flex: 1; }
+#news ul li .src			{ opacity: 0.5; 
+					  font-size: 14pt; }
+
+footer					{ padding: 4rem 0 2rem 0; 
+					  text-align: center;
+					  font-size: 11pt;
+					  color: #666; }
+footer a				{ color: #000; }
+footer p				{ margin: 0.1em 0; }
 
 @media only screen and (max-width: 768px), only screen and (max-device-width: 768px) {
-ul li 				{ display: block; }
-ul li > *			{ display: block; }
-ul li + li			{ margin-top: 0.5em; }
-ul li .src			{ line-height: 100%;
-				  font-size: smaller; }
-
-header				{ width: 95%; 
-				  min-width: auto; }
-#main				{ padding-top: 5%; }
-#main, #contact			{ width: 95%; 
-				  min-width: auto; }
-#logo				{ text-align: center; }
-h1				{ font-size: 16pt; }
-h2				{ font-size: 18pt;
-			 	  text-align: center; }
-header nav			{ font-size: 12pt; }
-section				{ display: block; }
-footer				{ width: 95%;
-				  min-width: auto; }
+  #news ul li 				{ display: block; }
+  #news ul li > *			{ display: block; }
+  #news ul li + li			{ margin-top: 0.5em; }
+  #news ul li .src			{ line-height: 100%;
+  				  	  font-size: smaller; }
 }
