--- a/index.css
+++ b/index.css
@@ -54,7 +54,7 @@ code, pre				{ font-size: 11pt; }
 #top					{ padding-top: 18rem;
 					  padding-bottom: 6rem;
 					  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0.85) 100%), 
-						      url(background.png);
+						      url(background.jpg);
 					  background-position: 50% 50%;
 					  background-repeat: no-repeat;
 					  background-color: #000;
@@ -69,7 +69,7 @@ code, pre				{ font-size: 11pt; }
 					  font-weight: normal; }
 
 #start					{ background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), 
-						      url(background-white.png); 
+						      url(background-white.jpg); 
 					  background-position: 50% 50%;
 					  background-repeat: repeat-y; }
 #start .exemplar 			{ color: #888; }
