--- a/index.css
+++ b/index.css
@@ -16,7 +16,9 @@ article > header h3			{ text-align: center;
 					  margin-bottom: 0;
 					  font-weight: 400; }
 .paired					{ display: flex; 
-					  align-items: center; }
+					  display: -webkit-flex;
+					  align-items: center; 
+					  -webkit-align-items: center; }
 .paired > :first-child			{ padding-right: 1rem; }
 .paired > :last-child			{ padding-left: 1rem; }
 p, li					{ line-height: 140%; }
@@ -51,8 +53,8 @@ code, pre				{ font-size: 11pt; }
 					  font-variant: small-caps;
 					  margin: 0;  }
 
-#top					{ padding-top: 18rem;
-					  padding-bottom: 6rem;
+#top					{ padding-top: 15rem;
+					  padding-bottom: 4rem;
 					  background: linear-gradient(to bottom, rgba(0, 0, 0, 0.85) 0%, rgba(0, 0, 0, 0.85) 100%), 
 						      url(background.jpg);
 					  background-position: 50% 50%;
@@ -119,8 +121,10 @@ code, pre				{ font-size: 11pt; }
 					  background-repeat: repeat-y; }
 #news ul				{ list-style-type: none; 
 					  padding: 0; }
-#news ul li				{ display: flex; }
-#news ul li > :first-child		{ flex: 1; }
+#news ul li				{ display: flex;
+					  display: -webkit-flex; }
+#news ul li > :first-child		{ flex: 1; 
+					  -webkit-flex: 1; }
 #news ul li .src			{ opacity: 0.5; 
 					  font-size: 14pt; }
 
