--- a/index.css
+++ b/index.css
@@ -70,7 +70,7 @@ code, pre				{ font-size: 11pt; }
 					  text-shadow: 1px 1px 0 #000;
 					  font-weight: normal; }
 
-#start					{ background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), 
+#start					{ background: linear-gradient(to bottom, rgba(248, 248, 255, 0.92) 0%, rgba(248, 248, 255, 0.92) 100%), 
 						      url(background-white.jpg); 
 					  background-position: 50% 50%;
 					  background-repeat: repeat-y; }
@@ -114,8 +114,8 @@ code, pre				{ font-size: 11pt; }
 					  line-height: 150%; }
 
 
-#news					{ background: linear-gradient(to bottom, rgba(255, 255, 255, 0.9) 0%, rgba(255, 255, 255, 0.9) 100%), 
-						      url(background-white.png); 
+#news					{ background: linear-gradient(to bottom, rgba(248, 248, 255, 0.92) 0%, rgba(248, 248, 255, 0.92) 100%), 
+						      url(background-white.jpg); 
 					  background-position: 50% 50%;
 					  padding-bottom: 6rem;
 					  background-repeat: repeat-y; }
